--- a/templates/Painel-Plafam.html
+++ b/templates/Painel-Plafam.html
@@ -12,6 +12,9 @@
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" rel="stylesheet">
     
+    <!-- Link para seu arquivo de estilo principal -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    
     <script src="https://cdn.tailwindcss.com/3.4.16"></script>
     
     <script>
